--- a/resources/sass/frontend/_variables.scss
+++ b/resources/sass/frontend/_variables.scss
@@ -14,11 +14,6 @@ $web-min-width: 300px;
 // $sidebar-base-width: 225px;
 // // Change below variable to change the width of the sidenav when collapsed
 // $sidebar-collapsed-width: 90px;
-// Typography
-$font-family-sans-serif: 'Nunito',
-sans-serif;
-$font-size: 18px;
-$line-height-base: 1.6;
 // 顏色
 $white: #ffffff;
 $darkwhite: #f3f3f3;
@@ -28,3 +23,8 @@ $green: #93e5b4;
 $blue: #5f6b82;
 $pink: #f4ac9e;
 $brown: #55473f;
+
+// 字體設定
+$font-family-sans-serif: 'Noto Serif TC', 'Microsoft JhengHei', sans-serif;
+$font-size: 18px;
+$line-height-base: 1.6;
