--- a/public/css/frontend/frontend.css
+++ b/public/css/frontend/frontend.css
@@ -1551,7 +1551,7 @@ a.ui-button:active,
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Nunito", sans-serif;
+  --font-family-sans-serif: "Noto Serif TC", "Microsoft JhengHei", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -1574,7 +1574,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Noto Serif TC", "Microsoft JhengHei", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.6;
@@ -7073,7 +7073,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Noto Serif TC", "Microsoft JhengHei", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -7175,7 +7175,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Nunito", sans-serif;
+  font-family: "Noto Serif TC", "Microsoft JhengHei", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -11471,7 +11471,7 @@ html {
 
 body {
   height: 100%;
-  font-family: "\5FAE\8EDF\6B63\9ED1\9AD4";
+  font-family: "Noto Serif TC", "Microsoft JhengHei", sans-serif;
   background-color: #000;
 }
 
@@ -11965,6 +11965,7 @@ div#headerbox .headerRow h3 {
 }
 #news .container h1 {
   letter-spacing: 20px;
+  font-size: 2.2rem;
   font-weight: bold;
 }
 #news .container .newsTable {
@@ -11989,7 +11990,7 @@ div#headerbox .headerRow h3 {
   letter-spacing: 4px;
 }
 #news .container .newsTable .newsRow .readMore {
-  font-size: 0.8rem;
+  font-size: 1rem;
   padding-top: 15px;
   text-align: right;
 }
