--- a/resources/sass/frontend/_global.scss
+++ b/resources/sass/frontend/_global.scss
@@ -7,7 +7,7 @@ html {
 
 body {
     height: 100%;
-    font-family: '微軟正黑體';
+    font-family: $font-family-sans-serif;
     background-color: #000;
 }
 
