--- a/resources/sass/frontend/freebooks/index.scss
+++ b/resources/sass/frontend/freebooks/index.scss
@@ -40,45 +40,63 @@
     }
 }
 
-.book-container{
-    padding: 0px 70px;
-    .book-card{
+.pd-25{
+    padding-right: 25px;
+}
+
+.freebook-container{
+    .freebook-card{
         width: calc(100%);
-        margin-bottom: 50px;
+        height: 310px;
+        margin-bottom: 40px;
         border: 1px solid $blue;
-        border-radius: 50px;
-        .book-card-link{
+        border-radius: 10px;
+        .freebook-card-link{
             display: inline-block;
             width: 100%;
-            padding: 20px 0px 15px 0px;
-            .book-cover-image{
+            height: 100%;
+            padding: 30px 20px 30px 10px;
+            .freebook-cover-image{
                 float: left;
-                width: 40%;
-                padding: 0px 0px 0px 10px;
+                width: 50%;
+                padding: 0px;
                 text-align: center;
-                border-right: 5px solid $green;
                 img{
-                    width: 60%;
+                    width: 85%;
+                    box-shadow: 4px 5px 7px 2px rgba(0, 0, 0, 0.2);
                 }
             }
-            .book-info{
+            .freebook-info{
                 float: right;
-                width: 60%;
+                width: 50%;
+                height: 100%;
                 color: $brown;
-                padding-left: 30px;
-                padding-top: 15px;
-                .book-title{
-                    font-weight: bold;
-                    font-size: 1.5rem;
+                padding-left: 10px;
+                position: relative;
+                .freebook-title{
                     margin-bottom: 15px;
-                    line-height: 2.3rem;
+                    border-bottom: 3px solid $pink;
+                    h4{
+                        font-weight: bold;
+                        font-size: 1.3rem;
+                        line-height: 2rem;
+                    }
                 }
-                .book-small{
+                .freebook-small{
                     display: block;
-                    font-size: 1.2rem;
-                    margin-bottom: 10px;
+                    font-size: 0.9rem;
+                    margin-bottom: 5px;
+                }
+                .check-detail{
+                    color: pink;
+                    position: absolute;
+                    right: 0;
+                    bottom: 0;
                 }
             }
         }
+    }
+    .not-found-message{
+
     }
 }
