--- a/public/css/frontend/about/index.css
+++ b/public/css/frontend/about/index.css
@@ -93,3 +93,60 @@
 .content-paginate-container .content-paginate li.disabled:hover {
   color: #93e5b4;
 }
+
+.content-page-body {
+  padding: 70px 0px 0px 0px;
+}
+.content-page-body .container .about-detail-row-up {
+  background-color: rgba(255, 255, 255, 0.7);
+  font-size: 1.2rem;
+  letter-spacing: 3px;
+  padding: 52px;
+  line-height: 50px;
+}
+
+.about-down {
+  width: 100%;
+  background-color: #eaeaea;
+}
+.about-down .about-down-container {
+  position: absolute;
+  width: 100%;
+}
+.about-down .about-detail-row-down {
+  margin: 0;
+  height: 150px;
+  width: 100%;
+}
+.about-down .about-detail-row-down .about-detail-row {
+  width: 100%;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+  letter-spacing: 3px;
+  margin: 0;
+}
+.about-down .about-detail-row-down .about-detail-row p {
+  margin: 0;
+}
+.about-down .about-detail-row-down .about-detail-row .about-down-images-left {
+  position: relative;
+  top: 40px;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  display: flex;
+}
+.about-down .about-detail-row-down .about-detail-row .about-down-images-right {
+  position: relative;
+  bottom: 42px;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  float: right;
+  width: 20%;
+  right: 0;
+}
+.about-down .about-detail-row-down .about-detail-row .about-down-images-right img {
+  width: 100%;
+}
