--- a/public/css/frontend/announcements/index.css
+++ b/public/css/frontend/announcements/index.css
@@ -100,14 +100,14 @@
 
 .announcement-container {
   border: 2px solid #f4ac9e;
-  padding: 50px 100px;
+  padding: 100px 100px 50px;
 }
 .announcement-container .announcement-row {
   background-image: url("../../../images/frontend/icons/news_underline.png");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: 96%;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   height: 58px;
 }
 .announcement-container .announcement-row .announcement-link {
@@ -118,7 +118,6 @@
 .announcement-container .announcement-row .announcement-link .announcement-new-container {
   display: inline-block;
   width: 15%;
-  height: 100%;
   text-align: right;
 }
 .announcement-container .announcement-row .announcement-link .announcement-new-container .announcement-new {
@@ -132,7 +131,6 @@
 .announcement-container .announcement-row .announcement-link .announcement-info-container {
   display: inline-block;
   color: #55473f;
-  font-weight: bold;
   font-size: 1.4rem;
   width: 60%;
   height: 100%;
