--- a/resources/sass/frontend/about/index.scss
+++ b/resources/sass/frontend/about/index.scss
@@ -1,2 +1,68 @@
 @import "../variables";
 @import "../contents";
+.content-page-body {
+    padding: 70px 0px 0px 0px;
+    .container {
+        .about-detail-row-up {
+            background-color: rgba(255, 255, 255, 0.7);
+            font-size: 1.2rem;
+            letter-spacing: 3px;
+            padding: 52px;
+            line-height: 50px;
+        }
+    }
+}
+
+.about-down {
+    .about-down-container {
+        position: absolute;
+        width: 100%;
+    }
+    width: 100%;
+    background-color: $gray;
+    // margin: 0;
+    .about-detail-row-down {
+        margin: 0;
+        height: 150px;
+        width: 100%;
+        .about-detail-row {
+            width: 100%;
+            text-align: center;
+            font-size: 1.3rem;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin: 0;
+            p {
+                margin: 0;
+            }
+            .about-down-images-left {
+                position: relative;
+                top: 40px;
+                height: 100%;
+                width: 100%;
+                align-items: center;
+                display: flex;
+            }
+            .about-down-images-right {
+                position: relative;
+                bottom: 42px;
+                height: 100%;
+                align-items: center;
+                display: flex;
+                float: right;
+                width: 20%;
+                // left: 1240px;
+                right: 0;
+                img {
+                    width: 100%;
+                }
+            }
+            // .detail-line-image-left {
+            //     float: left;
+            // }
+            // .detail-line-image-right {
+            //     float: right;
+            // }
+        }
+    }
+}
