--- a/resources/sass/frontend/announcements/index.scss
+++ b/resources/sass/frontend/announcements/index.scss
@@ -1,6 +1,5 @@
 @import "../variables";
 @import "../contents";
-
 .content-paginate-container {
     .content-paginate {
         li {
@@ -9,26 +8,26 @@
     }
 }
 
-.announcement-container{
+.announcement-container {
     border: 2px solid $pink;
-    padding: 50px 100px;
-    .announcement-row{
+    padding: 100px 100px 50px;
+    .announcement-row {
         background-image: url('../../../images/frontend/icons/news_underline.png');
         background-repeat: no-repeat;
         background-position: bottom;
         background-size: 96%;
-        margin-bottom: 40px;  
-        height: 58px;  
-        .announcement-link{
+        margin-bottom: 50px;
+        height: 58px;
+        .announcement-link {
             display: inline-block;
             width: 100%;
             height: 100%;
-            .announcement-new-container{
+            .announcement-new-container {
                 display: inline-block;
                 width: 15%;
-                height: 100%;
+                // height: 100%;
                 text-align: right;
-                .announcement-new{
+                .announcement-new {
                     display: inline-block;
                     background-color: $pink;
                     color: $white;
@@ -37,32 +36,31 @@
                     font-size: 1.2rem;
                 }
             }
-            .announcement-info-container{
+            .announcement-info-container {
                 display: inline-block;
                 color: $brown;
-                font-weight: bold;
                 font-size: 1.4rem;
                 width: 60%;
                 height: 100%;
                 margin: 0px 25px 0px 30px;
-                .announcement-date{
+                .announcement-date {
                     display: inline-block;
                     letter-spacing: 3px;
                     margin-right: 20px;
                 }
-                .announcement-title{
+                .announcement-title {
                     display: inline-block;
                     letter-spacing: 5px;
                 }
             }
-            .announcement-readmore{
+            .announcement-readmore {
                 display: inline-block;
                 text-align: right;
                 width: 10%;
                 height: 100%;
                 color: $pink;
             }
-            &:hover{
+            &:hover {
                 text-decoration: none;
             }
         }
