--- a/resources/sass/frontend/freebooks/index.scss
+++ b/resources/sass/frontend/freebooks/index.scss
@@ -1,94 +1,92 @@
 @import "../variables";
 @import "../contents";
-
-.filter-row{
+.filter-row {
     margin-bottom: 90px;
-    .filter-dropbox{
+    .filter-dropbox {
         letter-spacing: 3px;
         height: 56px;
         border-radius: 20px;
     }
-    .filter-search{
+    .filter-search {
         background-color: white;
         border-radius: 20px;
         padding: 5px 0px 5px 15px;
         position: relative;
-        .search-icon{
+        .search-icon {
             display: inline-block;
             width: 30px;
             height: 30px;
         }
-        .search-input{
+        .search-input {
             display: inline-block;
             width: calc(100% - 135px);
             border: none;
-            font-weight: bold;
             padding: 0;
             font-size: 1rem;
         }
-        .search-button{
+        .search-button {
             color: black;
             display: inline-block;
             width: 75px;
             text-align: center;
             border-left: 2px solid $blue;
             font-weight: bold;
-            &:hover{
+            &:hover {
                 text-decoration: none;
             }
         }
     }
 }
 
-.pd-25{
+.pd-25 {
     padding-right: 25px;
 }
 
-.freebook-container{
-    .freebook-card{
+.freebook-container {
+    .freebook-card {
         width: calc(100%);
         height: 310px;
         margin-bottom: 40px;
         border: 1px solid $blue;
         border-radius: 10px;
-        .freebook-card-link{
+        .freebook-card-link {
             display: inline-block;
             width: 100%;
             height: 100%;
             padding: 30px 20px 30px 10px;
-            .freebook-cover-image{
+            .freebook-cover-image {
                 float: left;
                 width: 50%;
                 padding: 0px;
                 text-align: center;
-                img{
+                img {
                     width: 85%;
                     box-shadow: 4px 5px 7px 2px rgba(0, 0, 0, 0.2);
                 }
             }
-            .freebook-info{
+            .freebook-info {
                 float: right;
                 width: 50%;
                 height: 100%;
                 color: $brown;
                 padding-left: 10px;
                 position: relative;
-                .freebook-title{
+                .freebook-title {
                     margin-bottom: 15px;
                     border-bottom: 3px solid $pink;
-                    h4{
+                    h4 {
                         font-weight: bold;
                         font-size: 1.3rem;
                         line-height: 2rem;
                     }
                 }
-                .freebook-small{
+                .freebook-small {
                     display: block;
                     font-size: 0.9rem;
                     margin-bottom: 5px;
                 }
-                .check-detail{
-                    color: pink;
+                .check-detail {
+                    color: $pink;
                     position: absolute;
                     right: 0;
                     bottom: 0;
@@ -96,7 +94,5 @@
             }
         }
     }
-    .not-found-message{
-
-    }
+    .not-found-message {}
 }
