--- a/public/css/frontend/books/index.css
+++ b/public/css/frontend/books/index.css
@@ -36,6 +36,11 @@
   background-color: #eaeaea;
   padding: 70px 0px 60px 0px;
 }
+@media (max-width: 439px) {
+  .content-page-body {
+    padding: 70px 0px 15px 0px;
+  }
+}
 .content-page-body .goback-container {
   margin-top: 40px;
   border-bottom: 0.5px solid #5f6b82;
@@ -73,9 +78,15 @@
   height: 2.3rem;
   margin-top: 18px;
 }
+@media (max-width: 439px) {
+  .content-paginate-container {
+    margin-top: 0px;
+  }
+}
 .content-paginate-container .content-paginate {
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 .content-paginate-container .content-paginate li {
   display: block;
@@ -88,6 +99,23 @@
   font-weight: bold;
   cursor: pointer;
   transition: color 0.2s ease-in-out;
+}
+@media (max-width: 767px) {
+  .content-paginate-container .content-paginate li {
+    width: 40px;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 439px) {
+  .content-paginate-container .content-paginate li {
+    width: 30px;
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 329px) {
+  .content-paginate-container .content-paginate li {
+    width: 25px;
+  }
 }
 .content-paginate-container .content-paginate li:hover {
   color: #55473f;
@@ -171,14 +199,45 @@
   }
 }
 
+@media (max-width: 991px) {
+  .filter-row {
+    margin-bottom: 60px;
+  }
+}
+
 .book-container {
   padding: 0px 70px;
+}
+@media (max-width: 1199px) {
+  .book-container {
+    padding: 0px 35px;
+  }
+}
+@media (max-width: 767px) {
+  .book-container {
+    padding: 0px 0px;
+  }
 }
 .book-container .book-card {
   width: calc(100%);
   margin-bottom: 50px;
   border: 1px solid #5f6b82;
   border-radius: 50px;
+}
+@media (max-width: 991px) {
+  .book-container .book-card {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .book-container .book-card {
+    border-radius: 20px;
+  }
+}
+@media (max-width: 575px) {
+  .book-container .book-card {
+    border-radius: 10px;
+  }
 }
 .book-container .book-card .book-card-link {
   display: inline-block;
@@ -195,6 +254,16 @@
 .book-container .book-card .book-card-link .book-cover-image img {
   width: 60%;
 }
+@media (max-width: 1199px) {
+  .book-container .book-card .book-card-link .book-cover-image img {
+    width: 69%;
+  }
+}
+@media (max-width: 767px) {
+  .book-container .book-card .book-card-link .book-cover-image img {
+    width: 90%;
+  }
+}
 .book-container .book-card .book-card-link .book-info {
   float: right;
   width: 60%;
@@ -202,14 +271,59 @@
   padding-left: 30px;
   padding-top: 15px;
 }
+@media (max-width: 991px) {
+  .book-container .book-card .book-card-link .book-info {
+    padding-left: 15px;
+    padding-top: 0px;
+  }
+}
 .book-container .book-card .book-card-link .book-info .book-title {
   font-weight: bold;
   font-size: 1.5rem;
   margin-bottom: 15px;
   line-height: 2.3rem;
 }
+@media (max-width: 991px) {
+  .book-container .book-card .book-card-link .book-info .book-title {
+    font-size: 1.4rem;
+    margin-bottom: 0px;
+    line-height: inherit;
+  }
+}
+@media (max-width: 499px) {
+  .book-container .book-card .book-card-link .book-info .book-title {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 369px) {
+  .book-container .book-card .book-card-link .book-info .book-title {
+    font-size: 0.8rem;
+  }
+}
 .book-container .book-card .book-card-link .book-info .book-small {
   display: block;
   font-size: 1.2rem;
   margin-bottom: 10px;
+}
+@media (max-width: 991px) {
+  .book-container .book-card .book-card-link .book-info .book-small {
+    font-size: 0.9rem;
+  }
+}
+@media (max-width: 767px) {
+  .book-container .book-card .book-card-link .book-info .book-small {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 499px) {
+  .book-container .book-card .book-card-link .book-info .book-small {
+    font-size: 0.6rem;
+    margin-bottom: 5px;
+  }
+}
+@media (max-width: 369px) {
+  .book-container .book-card .book-card-link .book-info .book-small {
+    font-size: 0.5rem;
+    margin-bottom: 0px;
+  }
 }
