--- a/public/css/frontend/frontend.css
+++ b/public/css/frontend/frontend.css
@@ -12215,6 +12215,26 @@ footer {
   background-color: #55473f;
   color: #f3f3f3;
 }
+@media (max-width: 991px) {
+  footer {
+    height: calc(200px + 80px);
+  }
+}
+@media (max-width: 919px) {
+  footer {
+    height: calc(200px + 160px);
+  }
+}
+@media (max-width: 567px) {
+  footer {
+    height: calc(200px + 122px);
+  }
+}
+@media (max-width: 412px) {
+  footer {
+    height: calc(200px + 232px);
+  }
+}
 footer .container {
   position: relative;
   padding-top: 10px;
@@ -12223,10 +12243,25 @@ footer .container .footerTable {
   font-size: 1rem;
   letter-spacing: 3px;
 }
+@media (max-width: 567px) {
+  footer .container .footerTable {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 499px) {
+  footer .container .footerTable {
+    letter-spacing: 0px;
+  }
+}
 footer .container .footerTable th {
   color: #ffffff;
   font-weight: bold;
   padding: 10px 0px;
+}
+@media (max-width: 499px) {
+  footer .container .footerTable th {
+    padding: 3px 0px;
+  }
 }
 footer .container .footerTable td {
   padding-right: 10px;
@@ -12235,11 +12270,11 @@ footer .container .footerText {
   width: 100%;
   position: absolute;
   right: 0;
-  bottom: 16px;
+  bottom: 13px;
   font-size: 0.8rem;
   text-align: right;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1299px) {
   footer .container .footerText {
     right: 3%;
   }
@@ -12260,13 +12295,26 @@ footer .container .footerText {
     bottom: 18px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 919px) {
+  footer .container .footerText {
+    text-align: right;
+    right: 2%;
+    bottom: 2px;
+  }
+}
+@media (max-width: 575px) {
   footer .container .footerText {
     text-align: left;
-    right: -15px;
+    left: 14px;
+    bottom: 2px;
   }
   footer .container .footerText .button-area {
-    margin: 0;
+    margin: 0px;
+  }
+}
+@media (max-width: 450px) {
+  footer .container .footerText {
+    font-size: 0.6rem;
   }
 }
 footer .container .footerText .button-area {
@@ -12326,17 +12374,17 @@ footer .top span {
 footer .top:hover span {
   color: #93e5b4;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1299px) {
   footer .top {
     margin-left: 10px;
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1099px) {
   footer .top span {
     left: -1px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   footer .top {
     width: 100px;
   }
@@ -12349,7 +12397,7 @@ footer .top:hover span {
     left: 19%;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 919px) {
   footer .top {
     width: 150px;
   }
@@ -12362,18 +12410,31 @@ footer .top:hover span {
     left: 31%;
   }
 }
-@media (max-width: 680px) {
+@media (max-width: 679px) {
   footer .top span {
     left: 26%;
   }
 }
-@media (max-width: 992px) {
-  footer {
-    height: calc(200px + 80px);
+@media (max-width: 567px) {
+  footer .top img {
+    height: 204px;
   }
 }
-@media (max-width: 768px) {
-  footer {
-    height: calc(200px + 160px);
+@media (max-width: 412px) {
+  footer .top {
+    width: 120px;
+  }
+  footer .top img {
+    height: 278px;
+  }
+  footer .top span {
+    left: -4%;
+    bottom: 9%;
+    letter-spacing: 18px;
+  }
+}
+@media (max-width: 428px) {
+  footer .footer-text-container {
+    padding-right: 0px;
   }
 }
