--- a/resources/sass/frontend/_contents.scss
+++ b/resources/sass/frontend/_contents.scss
@@ -31,6 +31,9 @@
     min-width: $web-min-width;
     background-color: $gray;
     padding: 70px 0px 60px 0px;
+    @media (max-width: 439px) {
+        padding: 70px 0px 15px 0px;
+    }
     .goback-container {
         margin-top: 40px;
         border-bottom: 0.5px solid $blue;
@@ -68,9 +71,13 @@
     width: 100%;
     height: 2.3rem;
     margin-top: 18px;
+    @media (max-width: 439px) {
+        margin-top: 0px;
+    }
     .content-paginate {
         list-style: none;
         margin: 0;
+        padding: 0;
         li {
             display: block;
             width: 60px;
@@ -82,6 +89,17 @@
             font-weight: bold;
             cursor: pointer;
             transition: color 0.2s ease-in-out;
+            @media (max-width: 767px) {
+                width: 40px;
+                font-size: 1rem;
+            }
+            @media (max-width: 439px) {
+                width: 30px;
+                font-size: 0.8rem;
+            }
+            @media (max-width: 329px) {
+                width: 25px;
+            }
             &:hover {
                 color: $brown;
             }
