--- a/resources/sass/frontend/_footer.scss
+++ b/resources/sass/frontend/_footer.scss
@@ -5,16 +5,37 @@ footer {
     display: flex;
     background-color: $brown;
     color: $darkwhite;
+    @media (max-width: 991px) {
+        height: calc(#{$footer-height} + 80px);
+    }
+    @media (max-width: 919px) {
+        height: calc(#{$footer-height} + 160px);
+    }
+    @media (max-width: 567px) {
+        height: calc(#{$footer-height} + 122px);
+    }
+    @media (max-width: 412px) {
+        height: calc(#{$footer-height} + 232px);
+    }
     .container {
         position: relative;
         padding-top: 10px;
         .footerTable {
             font-size: 1rem;
             letter-spacing: 3px;
+            @media (max-width: 567px) {
+                font-size: 0.8rem;
+            }
+            @media (max-width: 499px) {
+                letter-spacing: 0px;
+            }
             th {
                 color: $white;
                 font-weight: bold;
                 padding: 10px 0px;
+                @media (max-width: 499px) {
+                    padding: 3px 0px;
+                }
             }
             td {
                 padding-right: 10px;
@@ -24,10 +45,10 @@ footer {
             width: 100%;
             position: absolute;
             right: 0;
-            bottom: 16px;
+            bottom: 13px;
             font-size: 0.8rem;
             text-align: right;
-            @media (max-width: 1300px) {
+            @media (max-width: 1299px) {
                 right: 3%;
             }
             @media (max-width: 1199px) {
@@ -40,12 +61,21 @@ footer {
                 right: -5%;
                 bottom: 18px;
             }
-            @media (max-width: 768px) {
+            @media (max-width: 919px) {
+                text-align: right;
+                right: 2%;
+                bottom: 2px;
+            }
+            @media (max-width: 575px) {
                 text-align: left;
-                right: -15px;
-                .button-area {
-                    margin: 0;
+                left: 14px;
+                bottom: 2px;
+                .button-area{
+                    margin: 0px;
                 }
+            }
+            @media (max-width: 450px) {
+                font-size: 0.6rem;
             }
             .button-area {
                 width: 120px;
@@ -111,15 +141,15 @@ footer {
                 color: $green;
             }
         }
-        @media (max-width: 1300px) {
+        @media (max-width: 1299px) {
             margin-left: 10px;
         }
-        @media (max-width: 1100px) {
+        @media (max-width: 1099px) {
             span {
                 left: -1px;
             }
         }
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
             width: 100px;
             img {
                 width: 10px;
@@ -130,7 +160,7 @@ footer {
                 left: 19%;
             }
         }
-        @media (max-width: 768px) {
+        @media (max-width: 919px) {
             width: 150px;
             img {
                 width: 15px;
@@ -141,16 +171,31 @@ footer {
                 left: 31%;
             }
         }
-        @media (max-width: 680px) {
+        @media (max-width: 679px) {
             span {
                 left: 26%;
             }
         }
+        @media (max-width: 567px) {
+            img {
+                height: 204px;
+            }
+        }
+        @media (max-width: 412px) {
+            width: 120px;
+            img {
+                height: 278px;
+            }
+            span {
+                left: -4%;
+                bottom: 9%;
+                letter-spacing: 18px;
+            }
+        }
     }
-    @media (max-width: 992px) {
-        height: calc(#{$footer-height} + 80px);
-    }
-    @media (max-width: 768px) {
-        height: calc(#{$footer-height} + 160px);
+    .footer-text-container{
+        @media (max-width: 428px) {
+            padding-right: 0px;
+        }
     }
 }
