--- a/resources/sass/frontend/freebooks/index.scss
+++ b/resources/sass/frontend/freebooks/index.scss
@@ -8,20 +8,34 @@
 
 .pd-25 {
     padding-right: 25px;
+    @media (max-width: 575px){
+        padding: 0px;
+    }
 }
 
 .freebook-container {
     .freebook-card {
         width: calc(100%);
-        height: 310px;
         margin-bottom: 40px;
         border: 1px solid $blue;
         border-radius: 10px;
+        position: relative;
+        @media (max-width: 429px){
+            border-radius: 8px;
+            margin-bottom: 30px;
+        }
+        @media (max-width: 350px){
+            border-radius: 5px;
+            margin-bottom: 15px;
+        }
         .freebook-card-link {
             display: inline-block;
             width: 100%;
             height: 100%;
             padding: 30px 20px 30px 10px;
+            @media (max-width: 429px){
+                padding: 10px;
+            }
             .freebook-cover-image {
                 float: left;
                 width: 50%;
@@ -30,34 +44,77 @@
                 img {
                     width: 85%;
                     box-shadow: 4px 5px 7px 2px rgba(0, 0, 0, 0.2);
+                    @media (max-width: 1199px){
+                        width: 50%;
+                    }
+                    @media (max-width: 991px){
+                        width: 70%;
+                    }
+                    @media (max-width: 767px){
+                        width: 75%;
+                    }
+                    @media (max-width: 429px){
+                        box-shadow: 2px 3px 7px 2px rgba(0, 0, 0, 0.2);
+                    }
                 }
             }
             .freebook-info {
                 float: right;
                 width: 50%;
-                height: 100%;
                 color: $brown;
                 padding-left: 10px;
-                position: relative;
+                @media (max-width: 350px){
+                    padding-left: 0px;
+                }
                 .freebook-title {
                     margin-bottom: 15px;
                     border-bottom: 3px solid $pink;
+                    @media (max-width: 767px){
+                        margin-bottom: 10px;
+                    }
                     h4 {
                         font-weight: bold;
                         font-size: 1.3rem;
                         line-height: 2rem;
+                        @media (max-width: 767px){
+                            font-size: 1.3rem;
+                            line-height: 1.5rem;
+                        }
+                        @media (max-width: 575px){
+                            font-size: 1rem;
+                            line-height: 1.2rem;
+                        }
+                        @media (max-width: 350px){
+                            font-size: 0.6rem;
+                            line-height: 1rem;
+                        }
                     }
                 }
                 .freebook-small {
                     display: block;
                     font-size: 0.9rem;
                     margin-bottom: 5px;
+                    @media (max-width: 575px){
+                        font-size: 0.6rem;
+                        margin-bottom: 0px;
+                    }
+                    @media (max-width: 350px){
+                        font-size: 0.5rem;
+                    }
                 }
                 .check-detail {
                     color: $pink;
                     position: absolute;
-                    right: 0;
-                    bottom: 0;
+                    right: 23px;
+                    bottom: 32px;
+                    @media (max-width: 429px){
+                        right: 20px;
+                        bottom: 16px;
+                        font-size: 0.5rem;
+                    }
+                    @media (max-width: 350px){
+                        font-size: 0.5rem;
+                    }
                 }
             }
         }
